# fetch-records-dynamodb

./: Cargo.toml  README.md
src/: lib.rs
