[package] 
name = "get-records-dynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
egnitely_client = "0.1.2"
aws-config = "0.47.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-dynamodb = "0.17.0"
uuid = { version = "1.1.2", features = ["v4"] }
serde_dynamo = { version = "4.0.5", features = ["aws-sdk-dynamodb+0_17"] }